# neuro-fed

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  Modelfile  PLAN.md  PLAN2.md  README.md  architecture_diagram.md  bootstrap_specifications.md  llama_ffi_specifications.md  main_node_loop_specifications.md  nostr_federation_specifications.md  pc_hierarchy_specifications.md  project_structure_plan.md  tauri.conf.json  user_stories.md
data/: merged_alpaca_filtered.jsonl  merged_augmented.jsonl  merged_filtered.jsonl  merged_learning.jsonl  merged_openassistant_augmented.jsonl  merged_openassistant_filtered.jsonl
docs/: brain_sharing.md  equations.md  federation_modes.md  knowledge_filtering.md  ml_engine.md  model_manager.md  openai_proxy.md  privacy_networks.md  user_stories.md
examples/: basic_usage.rs  debug_db.rs  debug_gguf.rs  openai_proxy_usage.rs  openrouter_test.rs  performance_benchmark.rs  quick_perf_test.rs  test_bootstrap.rs  test_config_load.rs  test_main_integration.rs  test_pretrained_weights.rs
scripts/: augment_reasoning_dataset.py  collect_learning_feedback.py  fetch_datasets.py  generate_learning_dataset.py  llm_prepare_reasoning_dataset.py  prepare_reasoning_dataset.py  query_learning_dataset.py  run_minimal_pc.sh  validate_reasoning_dataset.py
src/: blossom_client.rs  bootstrap.rs  brain_manager.rs  config.rs  debug_test.rs  i2p_client.rs  knowledge_filter.rs  learning_log.rs  lib.rs  llama_ffi.rs  main.rs  metrics.rs  ml_engine.rs  model_manager.rs  node_loop.rs  nostr_federation.rs  openai_proxy.rs  payment_verifier.rs  pc_decoder.rs  pc_hierarchy.rs  pc_level.rs  pc_types.rs  persistence.rs  pow_verifier.rs  privacy_networks.rs  privacy_networks_fixed.rs  reasoning_state.rs  reasoning_tools.rs  semantic_cache.rs  sleep_phase.rs  tor_client.rs  types.rs  yggdrasil_client.rs
src/chat/: handlers.rs  mod.rs
src/federation/: blossom_client.rs  federation_manager.rs  mod.rs  nostr_federation.rs  payment_verifier.rs
src/openai_proxy/: calibration.rs  client.rs  components.rs  metrics.rs  mod.rs  streaming.rs  types.rs
src/privacy/: mod.rs  privacy_networks.rs  privacy_networks_fixed.rs
src/ui/: mod.rs
tests/: component_integration.rs  integration_tests.rs  minimal_pc_dataset_smoke.rs  minimal_pc_integration.rs  minimal_pc_light_smoke.rs  minimal_pc_script_smoke.rs  pc_learning_integration.rs  persistence_integration.rs  reasoning_state_tests.rs
ui/: app.js  index.html  styles.css
