[package]
name = "neuro-fed-node"
version = "0.1.0"
edition = "2024"
authors = ["NeuroFed Team"]
description = "Decentralized Federated Nervous System with Pure Hierarchical Predictive Coding"
license = "GPL-3.0-or-later"
repository = "https://github.com/neuro-fed/neuro-fed-node"

[[bin]]
name = "neuro-fed-node"
path = "src/main.rs"

[dependencies]

# Core dependencies

candle-core = "0.9.2"
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
anyhow = "1.0"
notify = "8.2.0"
automerge = "0.7.4"
ring = "0.17.8"
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json", "stream"] }

serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }

# Nostr protocol

nostr-sdk = "0.44.1"

# Federation dependencies
secp256k1 = "0.31.1"
bitcoin = { version = "0.32.0", features = ["std"], optional = true }
lightning = { version = "0.2.0", optional = true }
rand = "0.10.0"

# Configuration and persistence

config = "0.15.19"
toml = "0.9.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Utilities

chrono = "0.4.38"
uuid = { version = "1.22.0", features = ["v4"] }
log = "0.4.29"
simplelog = "0.12.2"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }
rustyline = "17.0.2"
rustyline-async = "0.4.9"
walkdir = "2.5" # Fast directory traversal for bootstrap

# PC Hierarchy specific dependencies

thiserror = "2.0.18"

# Hashing for cache keys
sha2 = "0.10.8"

# Brain sharing (safetensors for model weights)
safetensors = "0.7.0"
hex = "0.4.3"

# Model Manager dependencies
futures = "0.3.30"

# Tokenization for proper text processing
tokenizers = "0.22.2"
hf-hub = "0.5.0"

# Privacy networks (optional, placeholder versions for simulation)

url = "2.5.0"
base64 = "0.22.1"

rand_distr = "0.6.0"
rayon = "1.10.0"

# LRU cache for efficient eviction
lru = "0.16.3"

# High-performance async cache for semantic cache
moka = { version = "0.12.14", features = ["future"] }

# Vector similarity search for semantic cache
hnsw_rs = "0.3.4"

serde = { version = "1.0.203", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.5.0"

# Serialization for ndarray and DateTime

ndarray = "0.17.2"
ndarray-rand = "0.16.0"
serde_with = "3.8.1"

# Tracing for logging

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Web server dependencies

axum-server = "0.8.0"

# Optional for web UI (Phase 3)

tauri = { version = "2.10.3", optional = true }

[dev-dependencies]
tempfile = "3.10.2"

[features]
default = []
privacy = []
federation = ["bitcoin", "lightning"]
virality = []
web-ui = ["tauri"]
vulkan = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256
