[package]
name = "neuro-fed-node"
version = "0.1.0"
edition = "2024"
authors = ["NeuroFed Team"]
description = "Decentralized Federated Nervous System with Pure Hierarchical Predictive Coding"
license = "GPL-3.0-or-later"
repository = "https://github.com/neuro-fed/neuro-fed-node"

[[bin]]
name = "neuro-fed-node"
path = "src/main.rs"

[[bin]]
name = "neurofed-tauri"
path = "src/bin/neurofed-tauri.rs"

[dependencies]

# Core dependencies

candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
anyhow = "1.0"
notify = "8.2"
ring = "0.17"
axum = "0.8"
reqwest = { version = "0.13", default-features = false, features = ["json", "stream", "rustls"] }

serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }

# Nostr protocol

nostr-sdk = "0.44"

# Federation dependencies
secp256k1 = "0.31"
bitcoin = { version = "0.32", features = ["std"], optional = true }
lightning = { version = "0.2", optional = true }
rand = "0.10"

# Configuration and persistence

config = "0.15"
toml = "0.9"
redb = "3.1" 

# Utilities

chrono = "0.4"
uuid = { version = "1.22", features = ["v4"] }
log = "0.4"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.2.5" # Fast directory traversal for bootstrap
tempfile = "3.27"

# PC Hierarchy specific dependencies

thiserror = "2.0"

# Hashing for cache keys
sha2 = "0.10"

# Brain sharing (safetensors for model weights)
safetensors = "0.7"
hex = "0.4"

# Model Manager dependencies
futures = "0.3"

# Tokenization for proper text processing
tokenizers = "0.22"
hf-hub = "0.5"

# Document parsing for book study
lopdf = "0.39"  # Pure Rust PDF parsing replacement for pdf-extract
epub = "2.1"
indicatif = "0.18"
parquet = "58.0"

# Privacy networks (optional, placeholder versions for simulation)

url = "2.5"
base64 = "0.22"

rand_distr = "0.6"
rayon = "1.10"

# High-performance async cache for semantic cache
moka = { version = "0.12", features = ["future"] }

# Vector similarity search for semantic cache
hnsw_rs = "0.3"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
lazy_static = "1.5"

# Tracing for logging

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics for observability
metrics = "0.24"
once_cell = "1.21"

# Web server dependencies

axum-server = "0.8"

# Optional for web UI (Phase 3)

tauri = { version = "2.10", optional = true, features = ["tray-icon", "image-png"] }
thread-priority = "3.0.0"

[build-dependencies]
tauri-build = { version = "2.5" }

[dev-dependencies]
tempfile = "3.27"

[features]
default = []
privacy = []
federation = ["bitcoin", "lightning"]
virality = []
web-ui = ["tauri"]
vulkan = []

[profile.release]
opt-level = 3
lto = "thin"         # Faster linking than "fat"
codegen-units = 1
debug = true         # Keeps line numbers in the profiler!
panic = "abort"

[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256
